--- a/style.css
+++ b/style.css
@@ -86,6 +86,9 @@ h1 {
 
 .main-head {
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+  /* add back box-shadow:  */
+  z-index: 2;
+  position: relative;
 }
 nav {
   width: 90%;
@@ -111,10 +114,43 @@ nav {
   margin: 0 0 0 auto;
   display: flex;
   flex-wrap: wrap;
+  overflow: hidden;
 }
 .hero-introduction {
   flex: 1 1 40rem;
+  text-align: center;
+}
+.hero-introduction p {
+  padding: 5rem 10rem;
+}
+.hero-introduction h2 {
+  padding-top: 3rem;
+}
+
+.hero-introduction a {
+  padding: 2rem 8rem;
+  border: 3px solid black;
+  margin-bottom: 4rem;
 }
 .hero-image {
   flex: 1 1 40rem;
+  background: linear-gradient(#dad8dd, #dad1d4);
+  position: relative;
+  z-index: 1;
+}
+.hero-elena {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.plant {
+  position: absolute;
+  bottom: 0;
+  left: -20%;
+  z-index: -1;
+}
+
+.plant2 {
+  left: 40%;
 }
