--- a/style.css
+++ b/style.css
@@ -195,6 +195,36 @@ menu-check {
   display: none;
 }
 
+/* about section*/
+
+.about {
+  min-height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+}
+.about-text {
+  color: white;
+  background: var(--background-color);
+  flex: 2 1 40rem;
+  justify-content: space-around;
+}
+.about-image {
+  flex: 1 1 40rem;
+  width: 70%;
+  position: relative;
+}
+.about-image h5 {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -20%);
+}
+.about-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media screen and (max-width: 842px) {
   .hero {
     width: 100%;
