--- a/style.css
+++ b/style.css
@@ -239,6 +239,25 @@ menu-check {
   object-fit: cover;
 }
 
+/* Gallery*/
+.gallery {
+  display: grid;
+  min-height: 100vh;
+  grid-template-columns: repeat(3, 1fr);
+}
+.gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.gallery1 {
+  grid-column: 1/3;
+}
+.gallery2 {
+  grid-column: 3/4;
+  grid-row: 1/3;
+}
+
 @media screen and (max-width: 842px) {
   .hero {
     width: 100%;
@@ -303,5 +322,13 @@ menu-check {
   }
   .about-text div {
     padding: 3rem 3rem;
+  }
+  /* gallery*/
+  .gallery img {
+    grid-row: auto;
+    grid-column: auto;
+  }
+  .gallery {
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   }
 }
