--- a/style.css
+++ b/style.css
@@ -244,6 +244,7 @@ menu-check {
   display: grid;
   min-height: 100vh;
   grid-template-columns: repeat(3, 1fr);
+  position: relative;
 }
 .gallery img {
   width: 100%;
@@ -256,6 +257,16 @@ menu-check {
 .gallery2 {
   grid-column: 3/4;
   grid-row: 1/3;
+}
+.gallery-head {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  background-color: var(--background-color);
+  padding: 5rem 10rem;
+  text-align: center;
 }
 
 @media screen and (max-width: 842px) {
@@ -330,5 +341,8 @@ menu-check {
   }
   .gallery {
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  }
+  .gallery-head {
+    display: none;
   }
 }
