--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ html {
   --special-color: #906272;
   --background-color: #414141;
   --gray-text: #525252;
+  scroll-behavior: smooth;
 }
 
 h1 {
@@ -340,6 +341,7 @@ footer h4 {
   .burger {
     position: relative;
     display: block;
+    cursor: pointer;
   }
   .burger span {
     padding: 0.2rem 2rem;
@@ -374,7 +376,7 @@ footer h4 {
   .toggle .line2 {
     opacity: 0;
   }
-  .toogle .line3 {
+  .toggle .line3 {
     transform: rotateZ(-45deg) translateY(-300%);
     background-color: white;
   }
